--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
 /Map.class
 /Run.class
+/AEnemyClass.class
+/ArcherAttackClass.class
+/ArcherClass.class
+/ArcherLevelClass.class
+/ArcherMenuClass.class
+/ArmourClass.class
+/BowClass.class
+/KnifeClass.class
+/MEnemyClass.class
+/MageAttackClass.class
+/MageClass.class
+/MageLevelClass.class
+/MageMenuClass.class
+/PotionClass.class
+/RunClass.class
+/ShieldClass.class
+/StaffClass.class
+/SwordClass.class
+/WEnemyClass.class
+/WarriorAttackClass.class
+/WarriorClass.class
+/WarriorLevelClass.class
+/WarriorMenuClass.class
